--- a/_posts/1991-07-01-pin-to-top.md
+++ b/_posts/1991-07-01-pin-to-top.md
@@ -12,4 +12,4 @@ excerpt_separator:  <!--more-->
 * 是現此時全世界iáu有teh發行ê台文刊物siōng久長--ê。
 * 這ê網站kan-na收錄早期tī海外ê《台文通訊》，ùi 1991年ê第1期，到2006年ê第142期。
 
-![寄望台文通訊]{{ site.url }}{{ site.baseurl }}/image/kiabangTaibunThongsin.png)
+![寄望台文通訊]({{ site.url }}{{ site.baseurl }}/image/kiabangTaibunThongsin.png)
