Keng-sin chu-sìn

--- a/_posts/2021-07-01-pdf-all.md
+++ b/_posts/2021-07-01-pdf-all.md
@@ -111,7 +111,7 @@ excerpt_separator:  <!--more-->
 * [No.95 (2002-01-15)](/pdf/%E5%8F%B0%E6%96%87%E9%80%9A%E8%A8%8A_2002-01-15_No95.pdf){:target="_blank"}
 * [No.96 (2002-02-15)](/pdf/%E5%8F%B0%E6%96%87%E9%80%9A%E8%A8%8A_2002-02-15_No96.pdf){:target="_blank"}
 
-### No.97 ~ No. 118（總編輯：張秀滿 Tiuⁿ Siù-boán）
+### No.97 ~ No. 118（總編輯：Tiuⁿ Siù-boán 張秀滿）
 
 * [No.97 (2002-03-15)](/pdf/%E5%8F%B0%E6%96%87%E9%80%9A%E8%A8%8A_2002-03-15_No97.pdf){:target="_blank"}
 * [No.98 (2002-04-15)](/pdf/%E5%8F%B0%E6%96%87%E9%80%9A%E8%A8%8A_2002-04-15_No98.pdf){:target="_blank"}
