--- a/_posts/1991-07-01-pin-to-top.md
+++ b/_posts/1991-07-01-pin-to-top.md
@@ -1,17 +1,18 @@
 ---
 layout: post
 title: "Hoan-gêng 歡迎"
-date: 2091-07-01
+date: 2024-07-01
 excerpt_separator:  <!--more-->
+toc: true
 ---
 
 ## 《台文通訊》是近代台文運動siōng重要ê 1份台文刊物
 
-![台文通訊](/image/TaibunThongsin.png)
+![台文通訊](/assets/image/TaibunThongsin.png)
 
 * 《台文通訊》是1991年7--月Tēⁿ Liông-kng（鄭良光）先生tī美國Los Angeles創辦ê全台文刊物。
 * Ùi 2012年2--月開始kap《台文BONG報》合刊，號做《台文通訊BONG報》。
 * 是現此時全世界iáu有teh發行ê台文刊物siōng久長--ê。
 * 這ê網站kan-na收錄早期tī海外ê《台文通訊》，ùi 1991年ê第1期，到2006年ê第142期。
 
-![寄望台文通訊](/image/kiabangTaibunThongsin.jpg)
+![寄望台文通訊](/assets/image/kiabangTaibunThongsin.jpg)
